# Optional

./: .gitignore  CMakeLists.txt  CONTRIBUTORS.md  README.md  aligned__storage_8hpp_source.html  annotated.html  annotated_dup.js  bad__optional__access_8hpp.html  bad__optional__access_8hpp_source.html  classes.html  classopt_1_1Bad__optional__access-members.html  classopt_1_1Bad__optional__access.html  classopt_1_1Bad__optional__access.js  classopt_1_1None__t-members.html  classopt_1_1None__t.html  classopt_1_1None__t.js  classopt_1_1Optional-members.html  classopt_1_1Optional.html  classopt_1_1Optional.js  classopt_1_1Optional_3_01void_01_4-members.html  classopt_1_1Optional_3_01void_01_4.html  classopt_1_1Optional_3_01void_01_4.js  classopt_1_1detail_1_1Aligned__storage-members.html  classopt_1_1detail_1_1Aligned__storage.html  classopt_1_1detail_1_1Aligned__storage.js  dir_44a5d8a5dc65a582473f4943d7166c5b.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_df74429157df3b87beafd5dcc49be3f5.html  files.html  files.js  functions.html  functions_func.html  hierarchy.html  hierarchy.js  index.html  mainpage_8dox.html  menudata.js  namespacemembers.html  namespacemembers_func.html  (+13 more)
docs/: Doxyfile  annotated.html  bad__optional__access_8hpp.html  classopt_1_1Bad__optional__access-members.html  classopt_1_1Bad__optional__access.html  classopt_1_1None__t.html  classopt_1_1Optional-members.html  dir_d44c64559bbebec7f509842c48db8b23.html  mainpage.dox  namespacemembers_vars.html  namespaces.html  none_8hpp.html  optional_8hpp_source.html
docs/html/: annotated.html  bad__optional__access_8hpp.html  bad__optional__access_8hpp_source.html  classes.html  classmcurses_1_1Bad__optional__access-members.html  classmcurses_1_1Bad__optional__access.html  classmcurses_1_1None__t-members.html  classmcurses_1_1None__t.html  classmcurses_1_1Optional-members.html  classmcurses_1_1Optional.html  classmcurses_1_1bad__optional__access-members.html  classmcurses_1_1bad__optional__access.html  classmcurses_1_1optional-members.html  classmcurses_1_1optional.html  classmcurses_1_1optional__last__value-members.html  classmcurses_1_1optional__last__value.html  classmcurses_1_1optional__last__value_3_01void_01_4-members.html  classmcurses_1_1optional__last__value_3_01void_01_4.html  classnone__t.html  classopt_1_1None__t-members.html  classopt_1_1Optional.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_type.html  hierarchy.html  index.html  menudata.js  namespacemcurses.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespaceopt.html  namespaces.html  none_8hpp.html  none_8hpp_source.html  optional_8hpp.html  optional_8hpp_source.html  optional__last__value_8hpp.html  (+1 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  namespaces_0.js  searchdata.js  typedefs_0.js  variables_0.js
docs/latex/: annotated.tex  bad__optional__access_8hpp.tex  classmcurses_1_1Bad__optional__access.eps  classmcurses_1_1Bad__optional__access.tex  classmcurses_1_1None__t.tex  classmcurses_1_1Optional.tex  classmcurses_1_1bad__optional__access.eps  classmcurses_1_1bad__optional__access.tex  classmcurses_1_1optional.tex  classmcurses_1_1optional__last__value.tex  classmcurses_1_1optional__last__value_3_01void_01_4.tex  classnone__t.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  hierarchy.tex  namespacemcurses.tex  namespaces.tex  none_8hpp.tex  optional_8hpp.tex  optional__last__value_8hpp.tex  refman.tex
docs/search/: all_5.js  files_1.js
include/: bad_optional_access.hpp  none.hpp  optional.hpp  optional_last_value.hpp
include/detail/: aligned_storage.hpp
include/optional/: bad_optional_access.hpp  none.hpp  optional.hpp  optional_free_functions.hpp  optional_fwd.hpp  optional_reference.hpp  optional_value.hpp  optional_void.hpp
include/optional/detail/: aligned_storage.hpp  conjunction.hpp
search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_2.js  classes_3.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  pages_0.js  searchdata.js  variables_0.js
test/: CMakeLists.txt  aligned_storage_test.cpp  none_test.cpp  optional_free_functions_test.cpp  optional_last_value_test.cpp  optional_reference_test.cpp  optional_test.cpp  optional_value_test.cpp  optional_void_test.cpp
